fixed card alignment

--- a/bootstrapstyle.css
+++ b/bootstrapstyle.css
@@ -1,24 +1,20 @@
-* {
+
+.row {
   margin: 0;
   padding: 0;
 }
-
 .card-title {
   text-align: center;
-}
-
-body {
-  justify-content: center;
 }
 
 .card {
   margin: 1em;
   background-color: white;
+
 }
 
 img {
   border-radius: 5px;
-  box-sizing: border-box;
   height: 200px; 
 }
 
@@ -36,3 +32,6 @@ img {
 }
 
 
+.row {
+  margin-bottom: 10px;
+}
